<resources>
    <string name="app_name">Yuk!Memilih</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="check">Cek NIK</string>
    <string name="nik_hint">Masukkan NIK</string>
    <string name="pw_hint">Masukkan kata sandi</string>
    <string name="pw_hint2">Masukkan lagi kata sandi</string>
    <string name="create">Buat kata sandi</string>
    <string name="label_data"><u>Data Penduduk</u></string>
    <string name="calon1">Calon 1</string>
    <string name="calon2">Calon 2</string>
    <string name="vote">Pilih</string>
</resources>
