<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    tools:context="com.project.kuyk.yukmemilih.Register.PwInsertFragment">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_data"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <TextView
            android:id="@+id/dataPenduduk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data\..\n.\n.\n.\n.\n.\n.
            \n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n"
            android:textSize="22sp"/>
    </ScrollView>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/pw_hint"
        android:inputType="textPassword"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pw_hint2"
        android:inputType="textPassword"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="18sp"/>
</LinearLayout>
